Perkin-UAT/force-app/main/default/objects/SMAX_PS_Geography_Technician__c/SMAX_PS_Geography_Technician__c.object-meta.xml
<CustomObject>
    <description>Join table between the Geography and Technician</description>
    <label>Geography-Technician</label>
    <nameField>
        <label>Geography-Technician Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geography-Technician</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>