Perkin-UAT/force-app/main/default/objects/SMAX_PS_Geography_Technician__c/fields/SMAX_PS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_External_Id__c</fullName>
    <description>Auto-Filled with the concatenation of Geography and Technician Ids</description>
    <externalId>true</externalId>
    <inlineHelpText>Auto-Filled with the concatenation of Geography and Technician Ids</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>