Perkin-UAT/force-app/main/default/objects/SMAX_PS_Geography_Technician__c/fields/SMAX_PS_Geography__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Geography__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Geography</label>
    <referenceTo>SMAX_PS_Geography__c</referenceTo>
    <relationshipLabel>Geography-Technician</relationshipLabel>
    <relationshipName>Geography_Technician</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>