Perkin-UAT/force-app/main/default/objects/SMAX_PS_Geography_Technician__c/fields/SMAX_PS_Location__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Location__c</fullName>
    <label>Location</label>
    <length>10</length>
    <type>Text</type>
</CustomField>