Perkin-UAT/force-app/main/default/objects/SMAX_PS_Geography_Technician__c/fields/SMAX_PS_Rank__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Rank__c</fullName>
    <label>Rank</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>