Perkin-UAT/force-app/main/default/objects/SMAX_PS_Geography_Technician__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Technician__c</columns>
    <columns>SMAX_PS_Geography__c</columns>
    <columns>SMAX_PS_Location__c</columns>
    <columns>SMAX_PS_Rank__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>